--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
               <p>
               This is NCEI's Paleoclimatology study search and access tool, for which I am the principal developer. It is a Spring application using myBatis/Oracle 
               providing a RESTful API, and a search interface built with Angular.js. The interface allows searching over popular fields such as study investigators,
-              locations, and time periods, and was recently updated to support terms from the multi-year Controlled Variables standardization project. 
+              locations, and time periods, and was recently updated to support terms from the multi-year Controlled Variables standardization project. Bulk data access is 
+              enabled via a data bundling api and through the search interface.
               Current development is focused on performance improvements, such as virtual scrolling to handle e.g. the 4000+ investigators options, and a custom study 
               pre-generation cache system. 
               </p>
