header transition animation working

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="col-md-7">
           
           <div class="row post"> 
-            <h2 class="title">SetListr</h2>
+            <h2 class="title"><a href="setlistr">SetListr</a></h2>
             <p class="byline tags"><small><span>ReactJS</span> - <span>NodeJS</span> - <span>Express</span> - <span>MongoDB</span><br />
             <a href="http://github.com/someguy235/setlistr">GitHub > someguy235 > SetListr</a></small></p>
             <div class="row screenshot">
@@ -220,7 +220,7 @@
             <div class="well">
               <!-- <img src="resources/images/profile.jpg" alt="profile pic" class="img-responsive img-rounded"> -->
               <br />
-              <p>Hi, I'm Ethan Shepherd, a developer building web and science data applications in Asheville, NC. I've worked on everything from satellite data products 
+              <p>Hi, I'm Ethan Shepherd, a developer building web and science data applications in Las Vegas, NV. I've worked on everything from satellite data products 
               using C and Fortran, to Spring MVC apps on Oracle, to SPA's with Node, Angular, and React. 
               This page is a collection of some of the things I've built, either for my job or to learn something new.</p>
               <p style="text-align:center">
