scale content down, start day/night toggle

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ethan Shepherd - Home</title>
     <link rel="stylesheet" href="css/style.css" />
+    <!-- Moon by Svaha Graphic Studio from NounProject.com -->
+    <!-- Sun by Svaha Graphic Studio from NounProject.com -->
   </head>
   <body>
     <div id="root">not rendered</div>
