--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/style.scss" />
     <!-- Moon by Svaha Graphic Studio from NounProject.com -->
     <!-- Sun by Svaha Graphic Studio from NounProject.com -->
+    <!-- Play by Dimas Nanda from NounProject.com -->
+    <!-- Pause by uzeir syarief from NounProject.com -->
   </head>
   <body>
     <div id="root">not rendered</div>
