--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,20 @@
     <!-- Sun by Svaha Graphic Studio from NounProject.com -->
     <!-- Play by Dimas Nanda from NounProject.com -->
     <!-- Pause by uzeir syarief from NounProject.com -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-LKLG49261E"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-LKLG49261E");
+    </script>
   </head>
   <body>
     <div id="root">not rendered</div>
