--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,6 @@
   </head>
   <body>
     <div id="root">not rendered</div>
-    <script type="module" src="js/App.js"></script>
+    <script type="module" src="js/App.tsx"></script>
   </body>
 </html>
