--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ethan Shepherd - Home</title>
     <link rel="stylesheet" href="css/style.scss" />
+    <link rel="icon" href="img/favicon.png" />
+    <!-- <a href="https://www.flaticon.com/free-icons/las-vegas" title="las vegas icons">Las vegas icons created by Freepik - Flaticon</a> -->
     <!-- Moon by Svaha Graphic Studio from NounProject.com -->
     <!-- Sun by Svaha Graphic Studio from NounProject.com -->
     <!-- Play by Dimas Nanda from NounProject.com -->
